Initial migration to Jakarta EE, Spring 6 and Wicket. Several modules not compiling yet